v0.0.27/_sources/api/galois.FieldArray.rst.txt
galois.FieldArray
=================

.. currentmodule:: galois

.. autoclass:: FieldArray
   

   

   
   

   
   
   .. rubric:: Constructors
   .. autosummary::
   
      __init__
      Elements
      Identity
      Ones
      Random
      Range
      Vandermonde
      Vector
      Zeros
   
   

   
   
   .. rubric:: Special Methods
   .. autosummary::
   
      __repr__
      __str__
   
   

   
   
   .. rubric:: Methods
   .. autosummary::
   
      additive_order
      arithmetic_table
      characteristic_poly
      column_space
      compile
      display
      field_norm
      field_trace
      is_quadratic_residue
      left_null_space
      lu_decompose
      minimal_poly
      multiplicative_order
      null_space
      plu_decompose
      primitive_root_of_unity
      primitive_roots_of_unity
      repr_table
      row_reduce
      row_space
      vector
   
   

   
   
   .. rubric:: Attributes
   .. autosummary::
   
      ~FieldArray.characteristic
      ~FieldArray.default_ufunc_mode
      ~FieldArray.degree
      ~FieldArray.display_mode
      ~FieldArray.dtypes
      ~FieldArray.irreducible_poly
      ~FieldArray.is_extension_field
      ~FieldArray.is_prime_field
      ~FieldArray.is_primitive_poly
      ~FieldArray.name
      ~FieldArray.order
      ~FieldArray.primitive_element
      ~FieldArray.primitive_elements
      ~FieldArray.quadratic_non_residues
      ~FieldArray.quadratic_residues
      ~FieldArray.ufunc_mode
      ~FieldArray.ufunc_modes
   
   

   .. automethod:: __init__